--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+  "homepage":"https://koushik4915.github.io/Crud-app",
   "name": "my-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy":"npm run dev",
+    "deploy":"gh-pages -d build",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
